samples/_failures_safe/1761367054_46a649_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73b0c10e.c: In function ‘main’:
./samples/SAFE/__tmp_73b0c10e.c:133:5: error: expected declaration or statement at end of input
  133 |     printf("Matrix Operations Program\n");
      |     ^~~~~~
